--- a/_config.yml
+++ b/_config.yml
@@ -1,20 +1,20 @@
 # main text of home
-name: Jane Doe
-bio: A Girl who travels the world eating noodles
+name: Wenjun Huang
+bio: A Boy who wants more
 
 # twitter summary info
 description: A blog about technology and stuff related
 
-picture: assets/images/picture.jpg
+picture: assets/images/hwj.jpg
 
-url: http://koppl.in/violet
+url: https://hubery94.github.io/
 # your url: http://USERNAME.github.io
 
 # if you don't have any of social below, comment the line
-facebook: myfacebook
-twitter: mytwitter
-github: mygithub
-email: me@jane.doe
+# facebook: myfacebook
+# twitter: mytwitter
+github: https://github.com/hubery94/
+email:  2011huang@whu.edu.cn
 
 gems:
   - jekyll-seo-tag
