--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ url: https://hubery94.github.io/
 # if you don't have any of social below, comment the line
 # facebook: myfacebook
 # twitter: mytwitter
-github: https://github.com/hubery94/
+github: hubery94
 email:  2011huang@whu.edu.cn
 
 gems:
