--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: Wenjun Huang
 description: My Personal Home Page
 author: Wenjun Huang
-logo: /hcz-jekyll-blog/static/img/avatar.png
+logo: /static/img/avatar.png
 github: https://github.com/codeasashu
 about: Master
 
