--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title: Wenjun Huang
 description: My Personal Home Page
 author: Wenjun Huang
 logo: /static/img/avatar.png
-github: https://github.com/codeasashu
+github: https://github.com/hubery94
 about: Master
 
 baseurl: ""
