--- a/_data/projects.json
+++ b/_data/projects.json
@@ -1,30 +1,31 @@
 [
 	{
-		"name": "Cool project 1",
-		"image": "placeholder.jpg",
+		"name": "行人精确检索",
+		"image": "retriveal.jpg",
+		"date": "2017.07",
+		"tags": ["Android","nodejs"]
+	}，
+	
+	{
+		"name": "基于监控视频的人脸跟踪系统",
+		"image": "face.jpg",
 		"url": "#",
-		"date": "Jan 2014",
+		"date": "2016.10",
 		"tags": ["Angular JS","API"]
 	},
 	{
-		"name": "Cool project 2",
-		"image": "placeholder.jpg",
+		"name": "ImageNet大规模图像识别挑战赛",
+		"image": "detect.jpg",
 		"url": "#",
-		"date": "May 2014",
+		"date": "2016.06",
 		"tags": ["Android","PHP"]
 	},
 	{
-		"name": "Cool project 3",
-		"image": "placeholder.jpg",
+		"name": "基于视频的复杂场景下的目标跟踪及轨迹管理系统",
+		"image": "track.jpg",
 		"url": "#",
 		"date": "June 2014",
 		"tags": ["HTML","JQuery","PHP"]
-	},
-	{
-		"name": "Cool project 4",
-		"image": "placeholder.jpg",
-		"date": "Oct 2016",
-		"tags": ["Android","nodejs"]
 	}
-
+	
 ]
