--- a/_data/projects.json
+++ b/_data/projects.json
@@ -1,6 +1,6 @@
 [
 	{
-		"name": "行人精确检索&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;",
+		"name": "行人精确检索&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;",
 		"image": "retriveal.jpg",
 	    "url": "#",
 		"date": "2017.07",
