--- a/_data/projects.json
+++ b/_data/projects.json
@@ -1,10 +1,10 @@
 [
 	{
-		"name": "行人精确检索&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;",
+		"name": "复杂场景行人精确检索&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;",
 		"image": "retriveal.jpg",
 	    "url": "#",
 		"date": "2017.07",
-		"tags": ["Android","nodejs"]
+		"tags": ["Pattern Recognition","Retrieval"]
 	},
 	
 	{
@@ -12,21 +12,21 @@
 		"image": "face.jpg",
 		"url": "#",
 		"date": "2016.10",
-		"tags": ["Angular JS","API"]
+		"tags": ["Pattern Recognition","Face Detection"]
 	},
 	{
 		"name": "ImageNet大规模图像识别挑战赛",
 		"image": "detect.jpg",
 		"url": "#",
 		"date": "2016.06",
-		"tags": ["Android","PHP"]
+		"tags": ["Pattern Recognition","Deep Learning"]
 	},
 	{
 		"name": "基于视频的复杂场景下的目标跟踪及轨迹管理系统",
 		"image": "track.jpg",
 		"url": "#",
-		"date": "June 2014",
-		"tags": ["HTML","JQuery","PHP"]
+		"date": "2015.12",
+		"tags": ["Pattern Recognition","Tracking"]
 	}
 	
 ]
