--- a/_data/projects.json
+++ b/_data/projects.json
@@ -1,6 +1,6 @@
 [
 	{
-		"name": "复杂场景行人精确检索",
+		"name": "基于复杂场景的行人精确检索",
 		"image": "retriveal.jpg",
 	    "url": "/retrieval/",
 		"date": "2017.07",
