--- a/_data/projects.json
+++ b/_data/projects.json
@@ -2,7 +2,7 @@
 	{
 		"name": "基于复杂场景的行人精确检索",
 		"image": "retriveal.jpg",
-		"url":  "/static/projects/retrieval/",
+		"url":  "https://github.com/hubery94/hubery94.github.io",
 		"date": "2017.07",
 		"tags": ["Deep Learning","Retrieval"]
 	},
