--- a/_data/projects.json
+++ b/_data/projects.json
@@ -1,76 +1,30 @@
 [
 	{
-<<<<<<< HEAD
-<<<<<<< HEAD
 		"name": "基于复杂场景的行人精确检索",
-=======
-		"name": "行人精确检索&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;",
->>>>>>> parent of 27f100f... up
-=======
-		"name": "行人精确检索&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;",
->>>>>>> parent of 27f100f... up
 		"image": "retriveal.jpg",
 		"url":  "https://github.com/hubery94/hubery94.github.io",
 		"date": "2017.07",
-<<<<<<< HEAD
-<<<<<<< HEAD
-		"tags": ["Deep Learning","Retrieval"]
-=======
-		"tags": ["Android","nodejs"]
->>>>>>> parent of 27f100f... up
-=======
-		"tags": ["Android","nodejs"]
->>>>>>> parent of 27f100f... up
-	},
+		"tags": ["Deep Learning","Retrieval"]},
 	
 	{
 		"name": "基于监控视频的人脸跟踪系统",
 		"image": "face.jpg",
 		"url": "/static/projects/retrieval/",
 		"date": "2016.10",
-<<<<<<< HEAD
-<<<<<<< HEAD
-		"tags": ["Face Detection"]
-=======
-		"tags": ["Angular JS","API"]
->>>>>>> parent of 27f100f... up
-=======
-		"tags": ["Angular JS","API"]
->>>>>>> parent of 27f100f... up
-	},
+		"tags": ["Face Detection"]	},
 	{
 		"name": "ImageNet大规模图像识别挑战赛",
 		"image": "detect.jpg",
 		"url": "/static/projects/retrieval/",
 		"date": "2016.06",
-<<<<<<< HEAD
-<<<<<<< HEAD
 		"tags": ["Detection","Deep Learning"]
-=======
-		"tags": ["Android","PHP"]
->>>>>>> parent of 27f100f... up
-=======
-		"tags": ["Android","PHP"]
->>>>>>> parent of 27f100f... up
 	},
 	{
 		"name": "基于视频的复杂场景下的目标跟踪及轨迹管理系统",
 		"image": "track.jpg",
-<<<<<<< HEAD
-<<<<<<< HEAD
 		"url": "/static/projects/retrieval/",
 		"date": "2015.12",
 		"tags": ["Pattern Recognition","Tracking"]
-=======
-		"url": "#",
-		"date": "June 2014",
-		"tags": ["HTML","JQuery","PHP"]
->>>>>>> parent of 27f100f... up
-=======
-		"url": "#",
-		"date": "June 2014",
-		"tags": ["HTML","JQuery","PHP"]
->>>>>>> parent of 27f100f... up
 	}
 	
 ]
